fixed contrast

--- a/lesson3redowdd230/styles/styles.css
+++ b/lesson3redowdd230/styles/styles.css
@@ -5,10 +5,10 @@
 }
 
 :root {
-  --primary-color: #739e82;
+  --primary-color: #78a183;
   --secondary-color: #e3dee3;
   --accent1-color: #1b263b;
-  --accent2-color: #2d4654;
+  --accent2-color: #000;
   --accent3-color: #8b2635;
 }
 
